test : PartyControllerTest의 DisplayName 중 사진 url > 사진 파일명으로 변경